--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
           <div class="mySlides fade">
             <div class="numbertext">2 / 10</div>
-            <img src="images/photo2.jpeg" class="image" style="width:100%">
+            <img src="photo2.jpeg" class="image" style="width:100%">
             <div class="text">Group Photo</div>
           </div>
 
