--- a/index.html
+++ b/index.html
@@ -158,30 +158,17 @@
           <button class="cross-btn"><i class="fa fa-times"></i></button>
           <ul>
             <li>
-              <a href="https://instagram.com/codewithfaraz" target="_blank" rel="nofollow">
+              <a href="https://www.instagram.com/ikhtiyarpoetry_bhu?igsh=MWMzcmE2ZmJxZjQ1bw==" target="_blank" rel="nofollow">
                 <i class="fa fa-instagram"></i>
               </a>
             </li>
             <li>
-              <a href="https://www.youtube.com/@mathsloverpoint" target="_blank" rel="nofollow">
+              <a href="https://www.youtube.com/@ikhtiyarpoetry116" target="_blank" rel="nofollow">
                 <i class="fa fa-youtube"></i>
               </a>
             </li>
-            <li>
-              <a href="https://facebook.com/krishnakumari" target="_blank" rel="nofollow">
-                <i class="fa fa-facebook"></i>
-              </a>
-            </li>
-            <li>
-              <a href="https://twitter.com/codewithfaraz" target="_blank" rel="nofollow">
-                <i class="fa fa-twitter"></i>
-              </a>
-            </li>
-            <li>
-              <a href="https://linkedin.com/in/saniyaraj" target="_blank" rel="nofollow">
-                <i class="fa fa-linkedin"></i>
-              </a>
-            </li>
+            <p class="mob_no" style="font-size:1rem;font-family:"sans-serif";">Contact:- 9470867309 <br>
+            Email :- absurya8757@gmail.com</p>
           </ul>
         </div>
       </div>
