--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
       <a class="active" href="#home"><i class="fa fa-fw fa-home"></i> Home</a>
       <a href="#about"><i class="fa fa-fw fa-search"></i> About</a>
       <a href="#contact"><i class="fa fa-fw fa-envelope"></i> Contact</a>
-      <a href="#login"><i class="fa fa-fw fa-user"></i> Login</a>
     </div>
     <div class="home" id="home">
       <div class="logo">
@@ -139,15 +138,17 @@
         <p>
           Feel free to contact me about anything related to Ikhtiyar Poetry Club.
         </p>
-        <form class="contact-form" action="https://www.wikipedia.org/">
+        <form class="contact-form" action="https://forms.gle/FWFkL2ykACtCnqecA">
           <div class="input-area">
             <input type="text" placeholder="Your name"/>
           </div>
-          <div class="input-area">
-            <input type="email" placeholder="Email address" />
-          </div>
-          <div class="input-area h-200">
-            <textarea placeholder="Your message"></textarea>
+         <div class="input-area">
+            <label>Do you want to register?</label>
+            <select>
+              <option>Select</option>
+              <option>Yes</option>
+              <option>Yes</option>
+            </select>
           </div>
           <button class="sendbtn">Send</button>
         </form>
@@ -177,7 +178,7 @@
       </button>
     </div>
     <div class="login" id="login"></div>
-    <div class="footer" id="footer"></div>
+    
   </main>
   <script src="script.js"></script>
 </body>
