--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <p>
           Feel free to contact me about anything related to Ikhtiyar Poetry Club.
         </p>
-        <form class="contact-form" action="https://forms.gle/FWFkL2ykACtCnqecA">
+        <form class="contact-form" action="https://docs.google.com/forms/d/e/1FAIpQLSeee3R0ON4xpiXSAVBOd-DiltjAyJG6sXjD4F2DYFRMJk6Nsg/viewform?usp=sf_link">
           <div class="input-area">
             <input type="text" placeholder="Your name"/>
           </div>
