--- a/index.html
+++ b/index.html
@@ -134,18 +134,21 @@
     </div>
     <div class="contact" id="contact">
       <div class="container1">
-        <h2>Get in touch</h2>
+        <h2>Registeration page for Ikhtiyar Poetry</h2>
         <p>
-          Feel free to contact me about anything related to Ikhtiyar Poetry Club.
+          Kindly enter your name here and if you are intrested in becoming an active member of this Ikhtiyar poetry then please navigate to "Register Now" button from there please fill out your 
+          active response is manadatory. The details provided by you are treated as true and further process will be done accordingly . 
+          Please fill out the details properly .
         </p>
         <form class="contact-form" action="https://docs.google.com/forms/d/e/1FAIpQLSeee3R0ON4xpiXSAVBOd-DiltjAyJG6sXjD4F2DYFRMJk6Nsg/viewform?usp=sf_link">
           <div class="input-area">
             <input type="text" placeholder="Your name"/>
           </div>
           <br>
-          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeee3R0ON4xpiXSAVBOd-DiltjAyJG6sXjD4F2DYFRMJk6Nsg/viewform?embedded=true" width="640" height="1720" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-          <button class="sendbtn">Send</button>
+          
+          <button class="sendbtn">Register Now</button>
         </form>
+        <p>Thanks for responding</p>
       </div>
       <div class="social-container">
         <div class="custom-social-container">
