--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Ikhtiyar Poetry Club</title>
+  <title>Ikhtiyar Poetry</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="styles.css" rel="stylesheet" type="text/css" />
 </head>
@@ -19,7 +19,7 @@
     <div class="home" id="home">
       <div class="logo">
         <img src="images/logo.jpeg" alt="logo" />
-        <h1 class="title">Ikhtiyar Poetry Club</h1>
+        <h1 class="title">Ikhtiyar Poetry</h1>
       </div>
 
       <div class="gallery">
@@ -66,7 +66,7 @@
           <div class="mySlides fade">
             <div class="numbertext">7 / 10</div>
             <img src="images/photo8.jpeg" class="image" style="width:100%">
-            <div class="text">Ikhtiyar Club</div>
+            <div class="text">Ikhtiyar Poetry</div>
           </div>
 
           <div class="mySlides fade">
@@ -84,7 +84,7 @@
           <div class="mySlides fade">
             <div class="numbertext">10 / 10</div>
             <img src="images/photo11.jpeg" class="image" style="width:100%">
-            <div class="text">poetry club deepotsav banner</div>
+            <div class="text">poetry deepotsav banner</div>
           </div>
 
           <!-- Next and previous buttons -->
@@ -112,7 +112,7 @@
     <div class="about" id="about">
      
       <div class="block1">
-        <h1 class="about-text">About Ikhtiyar Poetry Club</h1>
+        <h1 class="about-text">About Ikhtiyar Poetry</h1>
         <p class="text-block">
           In a world that often feels fragmented and disconnected , poetry has the power to bridge the gap and foster a
           sense of belonging. It allows individual to share their experiences, thoughts and emotions in a way that is
